# Telegram-bot-for-training-centers

./: .gitignore  __init__.py  bot.session  docker-compose.yml  loader.py  main.py  pyproject.toml
data/: config.py
filters/: __init__.py
foreach_django/: bot.session
foreach_django/foreach_django/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
foreach_django/informations/: admin.py  apps.py  models.py  services.py  tasks.py  translation.py
foreach_django/informations/migrations/: 0001_initial.py  0002_alter_malumotlar_options_alter_obunachilar_options_and_more.py  0003_remove_malumotlar_obunachilar_and_more.py  0004_xabar_yuborish_schedule_date.py  0005_xabar_yuborish_is_sent.py  0006_remove_xabar_yuborish_is_sent.py
handlers/admins/: __init__.py  admin.py  kurs_qushish.py  kurs_tahrirlash.py  kurs_uchirish.py  other.py  remove_admins.py  statistika.py  user_all_reklama.py  user_id_reklama.py
handlers/users/: __init__.py  kurslar.py  manzil.py  sozlama.py  start.py
keyboards/default/: admin_menu.py  all_user.py  bekor_qilish.py  contact.py  get_admin.py  kurs_tahrirlash.py  menu.py  optimal_Buttons.py  sozlama_keyboards.py  til.py
keyboards/inline/: admin.py  aloqa.py  aloqaga_chiq.py  confirm_buttons.py  kurs_tahrirlash.py  kurslar.py  user_id_reklama.py
utils/: set_bot_commands.py
utils/db_api/: postgres.py
utils/misc/: logging.py
